# PixelMan

./: console.py  pyproject.toml  readme.md
Copy/: data.csv  data_using_prev.csv  diff_without_prev.csv  fit_factor.csv  test.py
Copy/Helpers/: example.py  exempi-2.6.1.tar.bz2  helpers.py  presets.xml  xmp2json.py  xmpHelper.py
Docs/: onemate.docx
Exceptions/: Errors.py
FileHelpers/: csv_helpers.py  image_helpers.py  json_helpers.py  presets.json
ImageWand/: ploty.py  wandy.py  wandy_fit.py
SeleniumHelpers/: helpers.py  implicit_helpers.py  upload_image.py
Test/: compare_white.py
